# centrevo

./: .gitignore  CHANGELOG.md  CLI.md  CONTRIBUTING.md  Cargo.toml  FITNESS_FUNCTION_RECOMMENDATIONS.md  IMPLEMENTATION_GUIDE.md  LICENSE  PYTHON.md  README.md  RECOMMENDATIONS.md  REFACTOR_PLAN.md  ROADMAP.md  SIMULATION_ALGORITHM.md  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml
benches/: README.md  analysis_benchmarks.rs  base_benchmarks.rs  evolution_benchmarks.rs  genome_benchmarks.rs  simulation_benchmarks.rs  storage_benchmarks.rs
crates/analysis/: Cargo.toml
crates/analysis/src/analysis/: composition.rs  distance.rs  diversity.rs  linkage.rs  mod.rs  polymorphism.rs  structure.rs  temporal.rs  utils.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: args.rs  defaults.rs  main.rs  printing.rs  utils.rs
crates/cli/src/commands/: analyze.rs  export.rs  init.rs  inspect.rs  list.rs  mod.rs  run.rs  setup.rs  validate.rs
crates/cli/tests/: cli.rs
crates/codec/: BENCHMARKS.md  Cargo.toml
crates/codec/benches/: codec_bench.rs
crates/codec/src/: error.rs  lib.rs  traits.rs  utils.rs
crates/codec/src/strategies/: bitpacked.rs  mod.rs  parallel.rs  unpacked.rs  zstd.rs
crates/python/: Cargo.toml
crates/python/src/python/: analysis.rs  bindings.rs  export.rs
crates/sim/: Cargo.toml
crates/sim/benches/: base_bench.rs  compression_comparison.rs  evolution_bench.rs  genome_bench.rs  simulation_bench.rs  storage_bench.rs
crates/sim/examples/: profile_mutation.rs
crates/sim/src/: errors.rs  lib.rs  prelude.rs
crates/sim/src/base/: arena.rs  fitness.rs  mod.rs  nucleotide.rs  sequence.rs
crates/sim/src/evolution/: mod.rs  mutation.rs  recombination.rs  selection.rs
crates/sim/src/genome/: chromosome.rs  haplotype.rs  individual.rs  mod.rs  repeat_map.rs
crates/sim/src/simulation/: builder.rs  configs.rs  engine.rs  initialization.rs  inputs.rs  mod.rs  parameters.rs  population.rs  report.md  sequence.rs
crates/sim/src/storage/: README.md  async_recorder.rs  database.rs  mod.rs  query.rs  recorder.rs  types.rs
crates/sim/tests/: checkpoint_resume.rs
docs/: OPTIMIZATIONS.md  PARALLELIZATION_ANALYSIS.md
examples/: analysis_tutorial.ipynb  async_recording_example.rs  centromere_drive.md  flexible_composition_analysis.rs  mutation_comparison.rs  neutral_drift.md  purifying_selection.md  python_analysis_example.py  python_builder_example.py  python_custom_sequences.py  python_fitness_example.py  python_simulation_run.py  rapid_divergence.md  test_serialization.rs
python/: README.md  pytest.ini  test_imports.py
python/centrevo/: __init__.py  __init__.pyi  plotting.py  plotting.pyi
python/tests/: README.md  __init__.py  test_analysis.py  test_builder_pattern.py  test_core.py  test_custom_sequences.py  test_fitness_config.py  test_simulation_run.py  test_storage.py
src/: README.md  lib.rs  prelude.rs
src/analysis/: composition.rs  distance.rs  diversity.rs  linkage.rs  mod.rs  polymorphism.rs  structure.rs  temporal.rs  utils.rs
src/base/: alphabet.rs  errors.rs  mod.rs  nucleotide.rs  sequence.rs
src/evolution/: mod.rs  mutation.rs  recombination.rs  selection.rs
src/genome/: chromosome.rs  haplotype.rs  individual.rs  mod.rs  repeat_map.rs
src/python/: analysis.rs  bindings.rs  export.rs  mod.rs
src/simulation/: builder.rs  engine.rs  initialization.rs  mod.rs  parameters.rs  population.rs
src/storage/: async_recorder.rs  database.rs  mod.rs  query.rs  recorder.rs
tests/: test_async_storage.rs  test_checkpoint_resume.rs  test_cli.rs  test_custom_initialization.rs  test_custom_initialization.rs.bak  test_parallel_reproducibility.rs  test_serialization.rs  test_simulation_workflow.rs  test_storage_query.rs
