[package]
name = "centrevo"
version = "0.1.0"
edition = "2024"

[lib]
name = "centrevo"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
rand = "0.9"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "base_benchmarks"
harness = false

[[bench]]
name = "genome_benchmarks"
harness = false

[[bench]]
name = "evolution_benchmarks"
harness = false

[[bench]]
name = "simulation_benchmarks"
harness = false
