[package]
name = "centrevo"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "High-performance simulator for centromeric sequence evolution"
repository = "https://github.com/YOUR_USERNAME/centrevo"
readme = "README.md"
keywords = ["bioinformatics", "evolution", "simulation", "genomics", "centromere"]
categories = ["science", "simulation"]

[lib]
name = "centrevo"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.27", optional = true }
rand = "0.9"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bin]]
name = "centrevo"
path = "src/bin/centrevo.rs"

[[bench]]
name = "base_benchmarks"
harness = false

[[bench]]
name = "genome_benchmarks"
harness = false

[[bench]]
name = "evolution_benchmarks"
harness = false

[[bench]]
name = "simulation_benchmarks"
harness = false
