[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "centrevo"
version = "0.1.0"
description = "High-performance simulator for centromeric sequence evolution"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["bioinformatics", "evolution", "simulation", "genomics", "centromere"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "cffi",
    "pyarrow>=14.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "pandas>=1.5.0",
    "polars>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/innan-lab/centrevo"
Repository = "https://github.com/innan-lab/centrevo"
Documentation = "https://github.com/innan-lab/centrevo/blob/main/PYTHON.md"

[tool.maturin]
features = ["python"]
python-source = "python"
include = [
    { path = "python/centrevo/__init__.pyi", format = "sdist" },
    { path = "python/centrevo/py.typed", format = "sdist" },
]
