[package]
name = "centrevo-cli"
version = "0.2.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[[bin]]
name = "centrevo"
path = "src/main.rs"

[dependencies]
centrevo-sim = { path = "../sim" }
centrevo-analysis = { path = "../analysis" }
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
