[package]
name = "centrevo-codec"
version = "0.1.0"
edition = "2021"
description = "Sequence encoding and error correction for Centrevo"

[dependencies]
reed-solomon-simd = "3.1"
crc32fast = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rayon = "1.11.0"
zstd = "0.13"


[dev-dependencies]
criterion = "0.8.1"
rand = "0.8"

[[bench]]
name = "codec_bench"
harness = false
