[package]
name = "centrevo-sim"
version = "0.2.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[dependencies]
rand = "0.9"
rand_distr = "0.5"
rand_pcg = "0.9"
rand_xoshiro = { version = "0.7", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rayon = "1.10"
anyhow = "1.0"
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
zstd = "0.13"
tempfile = "3.23.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "base_bench"
harness = false

[[bench]]
name = "evolution_bench"
harness = false

[[bench]]
name = "genome_bench"
harness = false

[[bench]]
name = "simulation_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false
